--- a/potato.css
+++ b/potato.css
@@ -22,8 +22,9 @@ h1 {
   top: 28px; left: 68px; 
 }
 /* Insert CSS for arms below this line*/
-
-
+#arms_image{
+  top: 180px; left: 25px;
+}
 
 
 /* Insert CSS for ears below this line*/
