--- a/potato.css
+++ b/potato.css
@@ -27,7 +27,12 @@ h1 {
 
 
 /* Insert CSS for ears below this line*/
-
+#ears_image{
+  width: 200px; 
+  margin-top: 70px;
+  margin-left: 87px;
+  
+}
 
 
 
@@ -67,9 +72,9 @@ h1 {
 
 
 /* Insert CSS for moustache below this line*/
-#moustache{
-  margin-top: 50%;
-  margin-left: 50%;
+#moustache_image{
+  margin-top: 160px;
+  margin-left: 92px;
 }
 
 
