--- a/potato.css
+++ b/potato.css
@@ -40,7 +40,6 @@ h1 {
 
 
 
-
 /* Insert CSS for nose below this line*/
 
 
@@ -72,7 +71,10 @@ h1 {
 
 
 /* Insert CSS for shoes below this line*/
-
+#shoes_image{
+  top: 60%;
+  left: 13%;
+}
 
 
 
