--- a/potato.css
+++ b/potato.css
@@ -42,8 +42,9 @@ h1 {
 
 
 /* Insert CSS for nose below this line*/
-
-
+#nose_image { 
+  margin-top: 120px;
+  margin-left: 130px;
 
 
 /* Insert CSS for eyebrows below this line*/
