--- a/potato.css
+++ b/potato.css
@@ -49,7 +49,7 @@ h1 {
 #nose_image { 
   margin-top: 120px;
   margin-left: 130px;
-
+}
 
 /* Insert CSS for eyebrows below this line*/
 #eyebrows_image{ 
