--- a/potato.css
+++ b/potato.css
@@ -57,7 +57,13 @@ h1 {
 
 
 /* Insert CSS for hat below this line*/
-
+#hat_image{
+  margin-top:.5%;
+   margin-right:20%;
+   margin-left: 20%;
+  
+   
+}
 
 
 
