--- a/potato.css
+++ b/potato.css
@@ -23,7 +23,9 @@ h1 {
 }
 /* Insert CSS for arms below this line*/
 
-
+#arms_image{
+  top:160px; left: 30px;
+}
 
 
 /* Insert CSS for ears below this line*/
