--- a/potato.css
+++ b/potato.css
@@ -22,7 +22,9 @@ h1 {
   top: 28px; left: 68px; 
 }
 /* Insert CSS for arms below this line*/
-
+#arms_image {
+  top: 178px; left: 25px;
+}
 
 /* Insert CSS for ears below this line*/
 
@@ -45,7 +47,9 @@ h1 {
 
 
 /* Insert CSS for eyebrows below this line*/
-
+#eyebrows_image {
+  top: 70px; left: 112px;
+}
 
 
 
