--- a/potato.css
+++ b/potato.css
@@ -22,6 +22,11 @@ h1 {
   top: 28px; left: 68px; 
 }
 /* Insert CSS for arms below this line*/
+#hat_image{
+   height:100px;
+   width:200px;
+   left:68;
+}
 
 
 /* Insert CSS for ears below this line*/
