--- a/potato.css
+++ b/potato.css
@@ -23,7 +23,10 @@ h1 {
 }
 /* Insert CSS for arms below this line*/
 
-
+#hatflower{ height:100px ;
+            width:100px ;
+            left:175px;
+          ;}
 /* Insert CSS for ears below this line*/
 
 
