--- a/potato.css
+++ b/potato.css
@@ -32,6 +32,10 @@ h1 {
 
 
 /* Insert CSS for eyes below this line*/
+#eyes_image{
+  top:100px;
+  right:142px;
+}
 
 
 
@@ -52,7 +56,10 @@ h1 {
 
 
 /* Insert CSS for glasses below this line*/
-
+#glasses_image{
+  top:85px;
+  right:111px;
+}
 
 
 
