--- a/potato.css
+++ b/potato.css
@@ -30,7 +30,9 @@ h1 {
 
 
 /* Insert CSS for eyes below this line*/
-
+#eyes_image{ 
+  height: 100px; width: 100px; right:130px;
+  top:75px }
 
 
 
