--- a/potato.css
+++ b/potato.css
@@ -1,17 +1,20 @@
 h1 {
   text-align: center;
+  color:hotpink;
+  font-family: 'Sansita One', cursive;
 }
-
 
 #potato {
   position: relative;
   width: 367px;
   height: 500px;
-  border: 2px solid black;
+  border: 3px inset hotpink;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
 }
+#potato:hover{box-shadow: 0px 0px 100px hotpink;
+color:hotpink;}
 
 #potato img {
   position: absolute;
