--- a/potato.css
+++ b/potato.css
@@ -28,7 +28,6 @@ h1 {
 
 
 
-
 /* Insert CSS for eyes below this line*/
 
 
@@ -71,7 +70,10 @@ h1 {
 
 /* Insert CSS for shoes below this line*/
 
-
+#shoes_image{
+  top: 300px; 
+  left:48px;
+}
 
 
 /* Insert CSS for cane below this line*/
