i added the nose

--- a/potato.css
+++ b/potato.css
@@ -27,8 +27,8 @@ h1 {
 }
 
 /* Insert CSS for ears below this line*/
-
-
+#nose_image {
+  top: 150px; right: 137px;
 
 
 /* Insert CSS for eyes below this line*/
