--- a/potato.css
+++ b/potato.css
@@ -49,7 +49,8 @@ h1 {
 /* Insert CSS for eyebrows below this line*/
 
 
-
+#eyebrows_image { 
+  right: 115px; top: 100px ;
 
 /* Insert CSS for glasses below this line*/
 
